@@ -84,6 +84,7 @@ type              = markdown
 [VersionFromModule]
 [ModuleBuild::Custom]
 [License]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
