@@ -39,15 +39,25 @@ bugtracker.mailto = bug-[% distname %]@rt.cpan.org
 ;location         = root
 ;type             = markdown
 
+;[Run::BeforeBuild]
+;run              = cp .build.PL Build.PL
+
+;[CopyFilesFromBuild]
+;copy             = Build.PL
+;move             = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
+
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
 [License]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
